@@ -73,6 +73,7 @@
   * Added methods ::system_dir, ::site_dir, ::home_dir and ::gem_dir to fetch
     the components of RDoc::RI::Paths.path individually.
   * Added support for rb_file_const.
+  * RDoc now processes files in sorted order.  Issue #71 by Vít Ondruch
 
 * Bug fixes
   * A word that is directly followed by a multi-word tidy link label no longer
